Update Notebook File

--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pymaceuticals Inc.\n",
+    "# Pymaceuticals, Inc.\n",
     "---\n",
     "## Analyzing the Linear Regression of Capomulin Drug Regimen\n",
     "### Data Analysis by Thay Chansy\n",
@@ -1051,7 +1051,7 @@
     "plt.xlabel(\"Drug Regimen\",fontsize = 16)\n",
     "plt.ylabel(\"# of Observed Mouse Timepoints\",fontsize = 14)\n",
     "\n",
-    "# Dispoay Timepoint List\n",
+    "# Display Timepoint List\n",
     "timepoints_list"
    ]
   },
