--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -17,8 +17,8 @@
     "A <strong>P-value</strong> of 0.9999999999999923 is <strong>extremely high</strong>, indicating that the observed positive association is almost certainly <strong>not due to chance</strong>.\n",
     "</p>\n",
     "\n",
-    "<p><strong>x-value</strong>: Weight (g)</p>\n",
-    "<p><strong>y-value</strong>: Avg Tumor Volume (mm3)</p>\n",
+    "<p><strong>x_value</strong>: Weight (g)</p>\n",
+    "<p><strong>y_value</strong>: Avg Tumor Volume (mm3)</p>\n",
     "<p><strong>Slope (m)</strong>: 0.8947726097340611</p>\n",
     "<p><strong>Y-intercept (b):</strong> 22.764229983591935</p>\n",
     "<p><strong>Standard error of the estimate (SE):</strong> 1.0249929158261613</p>\n",
