--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -14,7 +14,7 @@
     "<p>The results suggest a <strong>strong positive linear</strong> relationship between the independent and dependent variables, with a very high p-value indicating a statistically significant association.\n",
     "A lower <strong>Standard Error</strong> at 1.0249 suggests a relatively <strong>tight fit</strong> of the regression model.    \n",
     "The <strong>R-squared</strong> value of 0.9034 confirms that the linear model explains a significant portion of the variance in the data and indicates a <strong> very strong positive</strong> linear relationship between x_values and y_values.\n",
-    "A <strong>P-value</strong> of 0.9999999999999923 is <strong>extremely high</strong>, indicating that the observed positive association is almost certainly <strong>not due to chance</strong>.\n",
+    "A <strong>P-value</strong> of 0.9999999999999923 is <strong>extremely high</strong>, indicating that the observed positive association is almost certainly <strong>not due to chance</strong>. Lastly, the drug regimen of Capomulin has shown to significantly reduce tumor volume (mm3) on average compared to the other drug regimen trials.\n",
     "</p>\n",
     "\n",
     "<p><strong>x_value</strong>: Weight (g)</p>\n",
