Update main and pdf files

--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -190,7 +190,7 @@
     "# Checking the number of mice.\n",
     "total_mice = mouse_study_combined_df['Mouse ID'].nunique()\n",
     "\n",
-    "#display results\n",
+    "# Display results\n",
     "total_mice"
    ]
   },
@@ -215,7 +215,7 @@
     "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
     "duplicate_mice_id = mouse_study_combined_df.loc[mouse_study_combined_df.duplicated(subset=['Mouse ID', 'Timepoint',]),'Mouse ID'].unique()\n",
     "\n",
-    "# display results\n",
+    "# Display results\n",
     "duplicate_mice_id"
    ]
   },
@@ -449,7 +449,7 @@
     "# Filter the DataFrame to get all data for those IDs\n",
     "duplicate_mice_data_df = mouse_study_combined_df[mouse_study_combined_df['Mouse ID'].isin(duplicate_mice_id_df)]\n",
     "\n",
-    "# display results\n",
+    "# Display results\n",
     "duplicate_mice_data_df"
    ]
   },
